Improve Coach Dashboard UI + Presence button logic