@@ -19,8 +19,10 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.control.ContentDisplay;
 
+import java.sql.SQLException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,6 +30,7 @@ import java.util.Set;
 
 import Entities.Session;
 import enums.RoleUser;
+import javafx.scene.shape.Circle;
 import javafx.stage.Stage;
 
 public class UserSeanceController {
@@ -49,7 +52,7 @@ public class UserSeanceController {
 
     private List<Seance> masterData;
     private final Map<Integer, String> coachMap = new HashMap<>();
-
+    private final Map<Integer, UserApp> coachCache = new HashMap<>();
     // =================================================
     // INITIALISATION
     // =================================================
@@ -150,7 +153,7 @@ public class UserSeanceController {
 
             Label empty =
                     new Label("📭 Aucune séance disponible pour le moment.");
-            empty.getStyleClass().add("reco-empty");
+            empty.getStyleClass().add("empty-state");
 
             cardContainer.getChildren().add(empty);
             return;
@@ -162,52 +165,92 @@ public class UserSeanceController {
 
         try {
 
-            // 🔥 1️⃣ Récupérer recommandations IA
-            List<Seance> recommended =
+            // 🔥 1️⃣ Récupérer recommandations IA (ScoredSeance)
+            List<RecommendationServiceUser.ScoredSeance> recommended =
                     recommendationService.recommendForUser(userId);
 
             if (recommended == null)
                 recommended = List.of();
 
-            // 🔥 2️⃣ Garder uniquement les séances valides
-            List<Seance> validRecommended = recommended.stream()
-                    .filter(s -> s.getStatutSeance() == StatutSeance.PLANIFIEE)
-                    .filter(s -> matchesSearch(s, search))
-                    .collect(java.util.stream.Collectors.toList());
+            // 🔥 2️⃣ Garder uniquement séances valides + recherche
+            List<RecommendationServiceUser.ScoredSeance> validRecommended =
+                    recommended.stream()
+                            .filter(r -> r.seance.getStatutSeance() == StatutSeance.PLANIFIEE)
+                            .filter(r -> matchesSearch(r.seance, search))
+                            .toList();
 
             Set<Integer> recommendedIds = validRecommended.stream()
-                    .map(Seance::getIdSeance)
+                    .map(r -> r.seance.getIdSeance())
                     .collect(java.util.stream.Collectors.toSet());
 
-            // ⭐ SECTION RECOMMANDÉES
+            // =====================================================
+            // 1️⃣ SECTION RECOMMANDÉES
+            // =====================================================
             if (!validRecommended.isEmpty()) {
 
-                Label recoTitle =
-                        new Label("⭐ Recommandées pour vous");
-                recoTitle.getStyleClass().add("reco-title");
+                VBox recoSection = new VBox(20);
+                recoSection.getStyleClass().add("reco-section");
 
-                cardContainer.getChildren().add(recoTitle);
+                Label recoTitle = new Label("⭐ Recommandées pour vous");
+                recoTitle.getStyleClass().add("reco-section-title");
 
-                for (Seance s : validRecommended) {
-                    cardContainer.getChildren()
-                            .add(createCard(s, true));
+                FlowPane recoCards = new FlowPane();
+                recoCards.setHgap(25);
+                recoCards.setVgap(25);
+
+                int rank = 1;
+
+                for (RecommendationServiceUser.ScoredSeance scored : validRecommended) {
+
+                    recoCards.getChildren().add(
+                            createCard(
+                                    scored.seance,
+                                    true,
+                                    rank++,
+                                    scored.reason
+                            )
+                    );
                 }
 
-                cardContainer.getChildren().add(new Separator());
+                recoSection.getChildren().addAll(recoTitle, recoCards);
+                cardContainer.getChildren().add(recoSection);
 
             } else {
 
-                // 🔵 OPTION UX : afficher message intelligent
-                Label noReco =
-                        new Label("🤖 Aucune recommandation personnalisée pour le moment.\n"
-                                + "Réservez des séances pour obtenir des suggestions adaptées !");
-                noReco.getStyleClass().add("reco-empty");
+                VBox emptyReco = new VBox(10);
+                emptyReco.getStyleClass().add("empty-reco-box");
 
-                cardContainer.getChildren().add(noReco);
-                cardContainer.getChildren().add(new Separator());
+                Label noRecoTitle =
+                        new Label("🤖 Aucune recommandation personnalisée");
+                noRecoTitle.getStyleClass().add("empty-title");
+
+                Label noRecoSub =
+                        new Label("Réservez des séances pour obtenir des suggestions adaptées.");
+                noRecoSub.getStyleClass().add("empty-subtitle");
+
+                emptyReco.getChildren().addAll(noRecoTitle, noRecoSub);
+
+                cardContainer.getChildren().add(emptyReco);
             }
 
-            // 📋 AUTRES SÉANCES DISPONIBLES
+            // 🔥 ESPACE VISUEL ENTRE SECTIONS
+            Region divider = new Region();
+            divider.setPrefHeight(40);
+            cardContainer.getChildren().add(divider);
+
+            // =====================================================
+            // 2️⃣ AUTRES SÉANCES
+            // =====================================================
+            VBox allSection = new VBox(20);
+
+            Label allTitle =
+                    new Label("📋 Toutes les séances disponibles");
+            allTitle.getStyleClass().add("section-title");
+
+            FlowPane allCards = new FlowPane();
+            allCards.setHgap(25);
+            allCards.setVgap(25);
+
             for (Seance s : masterData) {
 
                 if (recommendedIds.contains(s.getIdSeance()))
@@ -217,10 +260,20 @@ public class UserSeanceController {
                     continue;
 
                 if (matchesSearch(s, search)) {
-                    cardContainer.getChildren()
-                            .add(createCard(s, false));
+
+                    allCards.getChildren().add(
+                            createCard(
+                                    s,
+                                    false,
+                                    0,
+                                    null
+                            )
+                    );
                 }
             }
+
+            allSection.getChildren().addAll(allTitle, allCards);
+            cardContainer.getChildren().add(allSection);
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -237,22 +290,52 @@ public class UserSeanceController {
     // =================================================
     // CREATE CARD
     // =================================================
-    private VBox createCard(Seance s, boolean recommended) {
+    private VBox createCard(Seance s,
+                            boolean recommended,
+                            int rank,
+                            String reason) {
 
-        VBox card = new VBox(15);
+        VBox card = new VBox(18);
         card.getStyleClass().add("seance-card-pro");
+        card.setPrefWidth(300);
 
         if (recommended) {
             card.getStyleClass().add("recommended-card");
         }
 
-        // ================= HEADER (Title + Reco badge) =================
-        VBox headerBox = new VBox(5);
+        // =================================================
+        // HEADER
+        // =================================================
+        VBox headerBox = new VBox(6);
+
+        if (recommended && rank > 0) {
+            Label rankBadge = new Label("TOP " + rank);
+            rankBadge.getStyleClass().add("rank-badge");
+            headerBox.getChildren().add(rankBadge);
+        }
+
+        if (recommended && reason != null && !reason.isBlank()) {
+
+            Label reasonLabel = new Label("💡 " + reason);
+            reasonLabel.getStyleClass().add("reco-reason");
+            reasonLabel.setWrapText(true);
+            reasonLabel.setMaxWidth(Double.MAX_VALUE);
+
+            headerBox.getChildren().add(reasonLabel);
+        }
+
+        HBox topRow = new HBox();
+        topRow.setAlignment(Pos.CENTER_LEFT);
+        topRow.setSpacing(10);
 
         Label title = new Label(s.getNom());
         title.getStyleClass().add("seance-title-pro");
 
-        headerBox.getChildren().add(title);
+        Region spacer = new Region();
+        HBox.setHgrow(spacer, Priority.ALWAYS);
+
+        topRow.getChildren().addAll(title, spacer);
+        headerBox.getChildren().add(topRow);
 
         if (recommended) {
             Label recoBadge = new Label("⭐ Recommandé pour vous");
@@ -260,81 +343,152 @@ public class UserSeanceController {
             headerBox.getChildren().add(recoBadge);
         }
 
-        // ================= INFOS =================
-        VBox infoBox = new VBox(6);
+        // =================================================
+        // INFO SECTION
+        // =================================================
+        VBox infoBox = new VBox(8);
 
         Label date = new Label("📅  " + s.getDateSeance());
         Label time = new Label("⏰  " + s.getHeureDebut() + " - " + s.getHeureFin());
-        Label coach = new Label("👤  " + coachMap.getOrDefault(
-                s.getIdCoach(), "Inconnu"));
 
         date.getStyleClass().add("seance-info-pro");
         time.getStyleClass().add("seance-info-pro");
-        coach.getStyleClass().add("seance-info-pro");
 
-        infoBox.getChildren().addAll(date, time, coach);
+        // 🔥 COACH AVEC IMAGE
+        HBox coachRow = new HBox(8);
+        coachRow.setAlignment(Pos.CENTER_LEFT);
 
-        // ================= CAPACITE =================
+        UserApp coachUser = coachCache.computeIfAbsent(
+                s.getIdCoach(),
+                id -> {
+                    try {
+                        return userService.getById(id);
+                    } catch (SQLException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+        );
+
+        String imagePath = coachUser != null
+                ? coachUser.getImageUrl()
+                : null;
+
+        Image image;
+
+        try {
+            if (imagePath != null && !imagePath.isBlank()) {
+                image = new Image(imagePath, true);
+            } else {
+                image = new Image(getClass()
+                        .getResource("/gui/default-user.png")
+                        .toExternalForm());
+            }
+        } catch (Exception e) {
+            image = new Image(getClass()
+                    .getResource("/gui/default-user.png")
+                    .toExternalForm());
+        }
+
+        ImageView coachImage = new ImageView(image);
+        coachImage.setFitWidth(28);
+        coachImage.setFitHeight(28);
+
+        // Rendre image ronde
+        Circle clip = new Circle(14, 14, 14);
+        coachImage.setClip(clip);
+
+        coachImage.getStyleClass().add("coach-avatar");
+
+        Label coachName = new Label(
+                coachUser != null
+                        ? coachUser.getNom() + " " + coachUser.getPrenom()
+                        : "Inconnu"
+        );
+        coachName.getStyleClass().add("seance-info-pro");
+
+        coachRow.getChildren().addAll(coachImage, coachName);
+
+        infoBox.getChildren().addAll(date, time, coachRow);
+
+        // =================================================
+        // COMPTEUR "DANS X JOURS"
+        // =================================================
+        LocalDate today = LocalDate.now();
+        long daysLeft = ChronoUnit.DAYS.between(today, s.getDateSeance());
+
+        if (daysLeft >= 0) {
+
+            Label countdown = new Label();
+
+            if (daysLeft == 0)
+                countdown.setText("🚀 Aujourd'hui");
+            else if (daysLeft == 1)
+                countdown.setText("⏳ Demain");
+            else
+                countdown.setText("⏳ Dans " + daysLeft + " jours");
+
+            countdown.getStyleClass().add("countdown-label");
+            infoBox.getChildren().add(countdown);
+        }
+
+        // =================================================
+        // CAPACITÉ
+        // =================================================
         int reserved = 0;
         try {
             reserved = reservationService.countReservations(s.getIdSeance());
         } catch (Exception ignored) {}
 
         int restantes = s.getCapacite() - reserved;
+        double progressValue = (double) reserved / s.getCapacite();
 
-        ProgressBar progress =
-                new ProgressBar((double) reserved / s.getCapacite());
-        progress.setPrefHeight(8);
+        ProgressBar progress = new ProgressBar(progressValue);
+        progress.setPrefHeight(6);
+        progress.setMaxWidth(Double.MAX_VALUE);
         progress.getStyleClass().add("places-progress");
 
         Label places = new Label(restantes + " places restantes");
         places.getStyleClass().add("places-label");
 
-        // ================= FOOTER =================
-        VBox footer = new VBox(8);
+        VBox capacityBox = new VBox(6, progress, places);
+
+        // =================================================
+        // FOOTER
+        // =================================================
+        VBox footer = new VBox(10);
 
         Label badge = new Label();
         badge.getStyleClass().add("badge-pro");
 
         Button actionBtn = new Button();
         actionBtn.setMaxWidth(Double.MAX_VALUE);
-        actionBtn.setPrefHeight(38);
+        actionBtn.setPrefHeight(42);
 
-        // ================= LOGIQUE METIER =================
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime startDateTime =
-                LocalDateTime.of(
-                        s.getDateSeance(),
-                        s.getHeureDebut()
-                );
+                LocalDateTime.of(s.getDateSeance(), s.getHeureDebut());
 
         boolean dejaReserve =
-                reservationService.exists(
-                        userId,
-                        s.getIdSeance()
-                );
+                reservationService.exists(userId, s.getIdSeance());
 
-        // 🔴 TERMINÉE
         if (s.getStatutSeance() == StatutSeance.TERMINEE) {
 
             badge.setText("Terminée");
             badge.getStyleClass().add("badge-grey");
 
-            actionBtn.setText("Terminée");
+            actionBtn.setText("Séance terminée");
             actionBtn.setDisable(true);
         }
 
-        // 🔴 ANNULÉE
         else if (s.getStatutSeance() == StatutSeance.ANNULEE) {
 
             badge.setText("Annulée");
             badge.getStyleClass().add("badge-red");
 
-            actionBtn.setText("Annulée");
+            actionBtn.setText("Séance annulée");
             actionBtn.setDisable(true);
         }
 
-        // 🔴 Déjà commencée
         else if (!now.isBefore(startDateTime)) {
 
             badge.setText("Déjà commencée");
@@ -344,7 +498,6 @@ public class UserSeanceController {
             actionBtn.setDisable(true);
         }
 
-        // 🔴 Complet
         else if (restantes <= 0) {
 
             badge.setText("Complet");
@@ -354,47 +507,16 @@ public class UserSeanceController {
             actionBtn.setDisable(true);
         }
 
-        // 🔵 Déjà réservé
         else if (dejaReserve) {
 
             badge.setText("Réservée");
             badge.getStyleClass().add("badge-blue");
 
-            String googleLink = null;
-
-            try {
-                googleLink = reservationService.getGoogleEventLink(
-                        userId,
-                        s.getIdSeance()
-                );
-            } catch (Exception ignored) {}
-
-            ImageView googleIcon = new ImageView(
-                    new Image(getClass()
-                            .getResource("/images/google.png")
-                            .toExternalForm())
-            );
-            googleIcon.setFitWidth(16);
-            googleIcon.setFitHeight(16);
-
-            actionBtn.setGraphic(googleIcon);
-            actionBtn.setContentDisplay(ContentDisplay.LEFT);
-            actionBtn.setGraphicTextGap(8);
+            actionBtn.setText("Voir réservation");
             actionBtn.getStyleClass().add("btn-google");
-
-            if (googleLink == null || googleLink.isBlank()) {
-
-                actionBtn.setText(" Ajouter au Google Calendar");
-                actionBtn.setOnAction(e -> ajouterAuCalendrier(s));
-
-            } else {
-
-                actionBtn.setText(" Voir dans Google Calendar");
-                actionBtn.setOnAction(e -> ouvrirGoogleCalendar(s));
-            }
+            actionBtn.setOnAction(e -> ouvrirGoogleCalendar(s));
         }
 
-        // 🟢 Disponible
         else {
 
             badge.setText("Disponible");
@@ -402,24 +524,29 @@ public class UserSeanceController {
 
             actionBtn.setText("Réserver");
             actionBtn.getStyleClass().add("btn-primary");
-
             actionBtn.setOnAction(e -> reserver(s));
         }
 
         footer.getChildren().addAll(badge, actionBtn);
 
-        // ================= BUILD CARD =================
+        // =================================================
+        // HOVER EFFECT
+        // =================================================
+        card.setOnMouseEntered(e -> card.getStyleClass().add("card-hover"));
+        card.setOnMouseExited(e -> card.getStyleClass().remove("card-hover"));
+
+        // =================================================
+        // BUILD
+        // =================================================
         card.getChildren().addAll(
                 headerBox,
                 infoBox,
-                progress,
-                places,
+                capacityBox,
                 footer
         );
 
         return card;
     }
-
     // =================================================
     // GOOGLE
     // =================================================
